@@ -3,9 +3,6 @@ Known bugs:
 EXPR: || and && are not lazy. ?: is not implemented. Double math not
       implemented. Functions like sin(), cos(), not implemented.
 
-jim::libPath variable is accessed in the local context instead than
-globally, so the [load] command will fail inside procs.
-
 [subst] ingores special meaning of JIM_BREAK and alike.
 
 [info level ?level?] takes the level argument like [uplevel], but
