@@ -1,3 +1,8 @@
+2005-03-04 13:32  antirez
+
+	* ChangeLog, jim-posix.c, jim-win32.c, jim-win32com.c, jim.c,
+	  jim.h, test.tcl: $id: ..$ strings added
+
 2005-03-04 13:15  antirez
 
 	* ChangeLog, Makefile: Added a 'commit' makefile target to generate
